--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Je me simplifie la vie en imprimant mes menus pour la semaine, en préparant ma liste de courses et en n'y pensant plus."
     />
+    <meta property="og:title" content="MealPlanner - j'imprime mes menus" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://celinegrc.github.io/MealPlanner/" />
+    <meta property="og:image" content="https://i.imgur.com/PH36Re3.png" />
+    <meta property="og:description" content="Imprimez vos menus de la semaine et trouvez des idées repas" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
